# linguamesh-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GLOBAL_GOAL.md  IMPLEMENTATION_STATUS.md  PRIVACY.md  README.md  REPOSITORY_ROLE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/workflows/: ci.yml  fuzz.yml  native-sdk.yml
assets/provider-catalog/: catalog.json  schema.json
bindings/android/: README.md  build.gradle.kts  settings.gradle.kts
bindings/android/core/: build.gradle.kts  consumer-rules.pro
bindings/android/core/src/main/cpp/: CMakeLists.txt  linguamesh_jni.cpp
bindings/android/core/src/main/kotlin/org/linguamesh/core/: CoreEvent.kt  LinguaMeshEngine.kt
bindings/android/core/src/test/kotlin/org/linguamesh/core/: CoreEventTest.kt  CoreResultTest.kt
bindings/apple/: Package.swift  README.md
bindings/apple/Sources/LinguaMeshCore/: LinguaMeshCore.swift
bindings/apple/Tests/LinguaMeshCoreTests/: LinguaMeshCoreTests.swift
bindings/apple/xcframework/: build-metadata.json  module.modulemap
bindings/cpp/: README.md
bindings/cpp/include/linguamesh/: linguamesh.hpp
bindings/linux/: README.md  linguamesh-core.pc.in
contracts/abi/: linguamesh.h
contracts/proto/: linguamesh.proto
crates/linguamesh-application/: Cargo.toml
crates/linguamesh-application/src/: lib.rs
crates/linguamesh-cli/: Cargo.toml
crates/linguamesh-cli/src/: main.rs
crates/linguamesh-document/: Cargo.toml
crates/linguamesh-document/src/: docx.rs  epub.rs  lib.rs  pdf.rs
crates/linguamesh-domain/: Cargo.toml
crates/linguamesh-domain/src/: file_lease.rs  lib.rs  retry.rs  routing.rs
crates/linguamesh-engine/: Cargo.toml
crates/linguamesh-engine/src/: lib.rs
crates/linguamesh-ffi/: Cargo.toml
crates/linguamesh-ffi/src/: lib.rs
crates/linguamesh-protocol/: Cargo.toml
crates/linguamesh-protocol/src/: lib.rs
crates/linguamesh-provider-anthropic/: Cargo.toml
crates/linguamesh-provider-anthropic/src/: lib.rs
crates/linguamesh-provider-api/: Cargo.toml
crates/linguamesh-provider-api/src/: lib.rs
crates/linguamesh-provider-catalog/: Cargo.toml
crates/linguamesh-provider-catalog/src/: lib.rs
crates/linguamesh-provider-gemini/: Cargo.toml
crates/linguamesh-provider-gemini/src/: lib.rs
crates/linguamesh-provider-ollama/: Cargo.toml
crates/linguamesh-provider-ollama/src/: lib.rs
crates/linguamesh-provider-openai/: Cargo.toml
crates/linguamesh-provider-openai/src/: lib.rs
crates/linguamesh-storage/: Cargo.toml
crates/linguamesh-storage/src/: lib.rs
crates/linguamesh-testkit/: Cargo.toml
crates/linguamesh-testkit/src/: lib.rs
docs/: architecture.md  native-sdk.md  releasing.md  testing.md
docs/adr/: 0001-proxy-authentication-secretref.md  0002-client-certificate-identity-secretref.md
docs/migrations/: abi-0-to-1.md  core-alpha-1-to-alpha-2.md  storage-1-to-2.md  storage-15-to-16.md  storage-5-to-6.md  storage-6-to-7.md  storage-7-to-8.md  storage-8-to-9.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: document_decoders.rs  ffi_commands.rs  ffi_handles.rs  ffi_inputs.rs  ffi_sequences.rs  protocol_decoders.rs
migrations/: 0001_initial.sql  0002_provider_profile_state.sql  0003_translation_history.sql  0004_translation_history_policy.sql  0005_translation_memory.sql  0006_document_jobs.sql  0007_document_job_pause.sql  0008_document_job_options.sql  0009_document_formats.sql  0010_document_packages.sql  0011_document_pptx.sql  0012_document_xlsx.sql  0013_document_epub.sql  0014_document_pdf.sql  0015_routing_profiles.sql  0016_document_routing_profile.sql  0017_document_quality_mode.sql  0018_document_translation_preset.sql  0019_provider_profile_notes.sql  0020_provider_profile_organization.sql  0021_provider_profile_project.sql  0022_provider_profile_region_account.sql  0023_provider_profile_custom_headers.sql  0024_provider_profile_secret_custom_headers.sql  0025_provider_profile_proxy.sql  0026_provider_profile_timeout.sql  0027_provider_profile_connection_timeout.sql  0028_provider_profile_streaming_idle_timeout.sql  0029_provider_profile_trusted_certificates.sql  0030_provider_profile_proxy_auth.sql  0031_provider_profile_client_certificate_identity.sql  0032_usage_records.sql  0033_glossary_libraries.sql  0034_provider_profile_health.sql
tests/native/: c_header_smoke.c  cpp_wrapper_smoke.cpp
tools/: build-android-sdk.sh  build-apple-sdk.sh  package-linux-sdk.sh  test-native-sdk-fake-provider.sh  test-native-sdk.ps1  test-native-sdk.sh  verify-linux-sdk-package.sh
