[workspace]
members = [
    "crates/linguamesh-application",
    "crates/linguamesh-cli",
    "crates/linguamesh-domain",
    "crates/linguamesh-engine",
    "crates/linguamesh-ffi",
    "crates/linguamesh-protocol",
    "crates/linguamesh-provider-api",
    "crates/linguamesh-provider-catalog",
    "crates/linguamesh-provider-openai",
    "crates/linguamesh-storage",
    "crates/linguamesh-testkit",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.4"
bytes = "1.10.1"
clap = { version = "4.5.41", features = ["derive"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
linguamesh-domain = { version = "0.1.0-alpha.2", path = "crates/linguamesh-domain" }
linguamesh-application = { version = "0.1.0-alpha.2", path = "crates/linguamesh-application" }
linguamesh-engine = { version = "0.1.0-alpha.2", path = "crates/linguamesh-engine" }
linguamesh-protocol = { version = "0.1.0-alpha.2", path = "crates/linguamesh-protocol" }
linguamesh-provider-api = { version = "0.1.0-alpha.2", path = "crates/linguamesh-provider-api" }
linguamesh-provider-catalog = { version = "0.1.0-alpha.2", path = "crates/linguamesh-provider-catalog" }
linguamesh-provider-openai = { version = "0.1.0-alpha.2", path = "crates/linguamesh-provider-openai" }
linguamesh-storage = { version = "0.1.0-alpha.2", path = "crates/linguamesh-storage" }
linguamesh-testkit = { version = "0.1.0-alpha.2", path = "crates/linguamesh-testkit" }
prost = "0.14.1"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = "0.7.15"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
url = "2.5.4"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
