[package]
name = "linguamesh-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
linguamesh-domain.workspace = true
linguamesh-engine.workspace = true
linguamesh-provider-anthropic.workspace = true
linguamesh-provider-api.workspace = true
linguamesh-provider-ollama.workspace = true
linguamesh-provider-openai.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
linguamesh-storage.workspace = true
linguamesh-testkit.workspace = true
tempfile.workspace = true

[lints]
workspace = true
