[package]
name = "linguamesh-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
linguamesh-domain.workspace = true
linguamesh-engine.workspace = true
linguamesh-provider-openai.workspace = true
linguamesh-storage.workspace = true
linguamesh-testkit.workspace = true
tokio.workspace = true

[lints]
workspace = true
