[package]
name = "linguamesh-document"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded TXT and Markdown inspection, segmentation, and reconstruction for LinguaMesh"

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
