[package]
name = "linguamesh-document"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded text document inspection, segmentation, and reconstruction for LinguaMesh"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
