[package]
name = "linguamesh-document"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded text document inspection, segmentation, and reconstruction for LinguaMesh"

[dependencies]
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
quick-xml.workspace = true
zip.workspace = true

[lints]
workspace = true
