[package]
name = "linguamesh-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
