[package]
name = "linguamesh-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
linguamesh-domain.workspace = true
linguamesh-provider-api.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
linguamesh-provider-openai.workspace = true
linguamesh-testkit.workspace = true

[lints]
workspace = true
