[package]
name = "linguamesh-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
linguamesh-application.workspace = true
linguamesh-domain.workspace = true
linguamesh-document.workspace = true
linguamesh-engine.workspace = true
linguamesh-protocol.workspace = true
linguamesh-provider-openai.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
linguamesh-testkit.workspace = true

[lints]
workspace = true
