[package]
name = "linguamesh-provider-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
futures-core.workspace = true
httpdate.workspace = true
linguamesh-domain.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
