[package]
name = "linguamesh-provider-gemini"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Google Gemini generate-content provider adapter for LinguaMesh"

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
linguamesh-domain.workspace = true
linguamesh-provider-api.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
linguamesh-testkit.workspace = true

[lints]
workspace = true
