[package]
name = "linguamesh-provider-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
linguamesh-domain.workspace = true
linguamesh-provider-api.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
