[package]
name = "linguamesh-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
linguamesh-domain.workspace = true
linguamesh-document.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
